# hex

./: .env copy  pyproject.toml  requirements.txt
config/: settings.py  urls.py
hex/: admin.py  models.py  serializers.py  views.py
hex/migrations/: 0001_initial.py  0002_avaliador_empresa_equipe_people_cpf.py  0003_people_equipe.py  0004_remove_people_equipe_equipe_people.py  0005_remove_equipe_people_remove_equipe_integrantes_and_more.py  0006_empresa_representante.py  0007_remove_empresa_representante_avaliador_empresa.py  0008_alter_avaliador_empresa.py  0009_alter_avaliador_empresa.py
