[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Bruno Dias", email = "bruno69correadias@gmail.com"},
]
dependencies = [
    "django>=4.2.7",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.1",
    "drf-spectacular>=0.26.5",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "python-dotenv>=1.0.0",
    "netifaces>=0.11.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
